--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.1",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-keep",
+	"version": "1.0.0",
+	"description": "An Obsidian plugin that integrates simply with Google Keep",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
