--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
-	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"id": "obsidian-keep",
+	"name": "Obsidian Keep",
+	"version": "1.0.0",
+	"minAppVersion": "0.13.33",
+	"description": "An Obsidian plugin that integrates simply with Google Keep",
+	"author": "Ellpeck",
+	"authorUrl": "https://ellpeck.de",
 	"isDesktopOnly": false
 }
