--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-keep",
 	"version": "1.0.0",
-	"description": "An Obsidian plugin that integrates simply with Google Keep",
+	"description": "An Obsidian plugin that displays Google Keep in the app",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,13 +9,12 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Ellpeck",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "^5.2.0",
-		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
+		"electron": "^13.6.2",
 		"esbuild": "0.13.12",
 		"obsidian": "latest",
 		"tslib": "2.3.1",
