--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "obsidian-keep",
 	"name": "Obsidian Keep",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"minAppVersion": "0.13.33",
 	"description": "An Obsidian plugin that displays Google Keep in the app",
 	"author": "Ellpeck",
 	"authorUrl": "https://ellpeck.de",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
