--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "obsidian-keep",
-	"name": "Obsidian Keep",
+	"id": "obsidian-custom-frames",
+	"name": "Obsidian Custom Frames",
 	"version": "1.1.1",
 	"minAppVersion": "0.13.33",
-	"description": "An Obsidian plugin that displays Google Keep in the app",
+	"description": "An Obsidian plugin that allows adding iframes with custom styling as editor tabs",
 	"author": "Ellpeck",
 	"authorUrl": "https://ellpeck.de",
 	"isDesktopOnly": true
