--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-keep",
+	"name": "obsidian-custom-frames",
 	"version": "1.1.1",
-	"description": "An Obsidian plugin that displays Google Keep in the app",
+	"description": "An Obsidian plugin that allows adding iframes with custom styling as editor tabs",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
