--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "obsidian-custom-frames",
-	"name": "Obsidian Custom Frames",
+	"name": "Custom Frames",
 	"version": "1.1.1",
 	"minAppVersion": "0.13.33",
-	"description": "An Obsidian plugin that allows adding iframes with custom styling as editor tabs",
+	"description": "A plugin that allows adding iframes with custom styling as editor tabs. Also comes with presets for Google Keep, Bring and more.",
 	"author": "Ellpeck",
 	"authorUrl": "https://ellpeck.de",
 	"isDesktopOnly": true
