--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Custom Frames",
 	"version": "1.1.1",
 	"minAppVersion": "0.13.33",
-	"description": "A plugin that allows adding iframes with custom styling as editor tabs. Also comes with presets for Google Keep, Bring and more.",
+	"description": "A plugin that allows adding iframes with custom styling as editor tabs. Also comes with presets for Google Keep and more.",
 	"author": "Ellpeck",
 	"authorUrl": "https://ellpeck.de",
 	"isDesktopOnly": true
