--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
 	"description": "A plugin that turns web apps into panes using iframes with custom styling. Also comes with presets for Google Keep and more.",
 	"author": "Ellpeck",
 	"authorUrl": "https://ellpeck.de",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
