--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"@types/node": "^16.11.6",
 		"builtin-modules": "^3.2.0",
 		"electron": "^13.6.2",
-		"esbuild": "0.13.12",
+		"esbuild": "0.14.0",
+		"esbuild-plugin-copy": "^1.3.0",
 		"obsidian": "latest",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4"
